# search-system

./: .clang-format  CMakeLists.txt  README.md  main.cpp
DocumentsExamples/: document_number_1.txt  document_number_2.txt  document_number_3.txt
modules/DirectoryParser/: DirectoryParser.cpp  DirectoryParser.h
modules/SearchSystem/: SearchSystem.cpp  SearchSystem.h
